--- a/Project/.gitignore
+++ b/Project/.gitignore
@@ -7,6 +7,8 @@
 *.userosscache
 *.sln.docstates
 *.json
+!package.json
+!package-lock.json
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
@@ -247,3 +249,4 @@ ModelManifest.xml
 .fake/
 
 .idea/
+dist/
