--- a/Project/Project/package.json
+++ b/Project/Project/package.json
@@ -5,10 +5,12 @@
   "private": true,
   "dependencies": {
     "extract-text-webpack-plugin": "^3.0.2",
+    "immer": "^5.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router": "^5.1.2",
-    "react-router-dom": "^5.1.2"
+    "react-router-dom": "^5.1.2",
+    "redux": "^4.0.4"
   },
   "devDependencies": {
     "@babel/cli": "^7.7.0",
@@ -23,6 +25,7 @@
     "css-loader": "^3.2.0",
     "html-webpack-plugin": "^3.2.0",
     "react-hot-loader": "^4.12.18",
+    "react-redux": "^7.1.3",
     "style-loader": "^1.0.0",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
