--- a/Project/Project/package.json
+++ b/Project/Project/package.json
@@ -4,12 +4,15 @@
   "description": "",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.4.1",
+    "date-time": "^3.1.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "immer": "^5.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
+    "react-timestamp": "^5.1.0",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0"
