--- a/Project/Project/package.json
+++ b/Project/Project/package.json
@@ -6,9 +6,13 @@
   "dependencies": {
     "bootstrap": "^4.4.1",
     "date-time": "^3.1.0",
+    "es6-promise": "^4.2.8",
     "extract-text-webpack-plugin": "^3.0.2",
     "immer": "^5.0.0",
+    "isomorphic-fetch": "^2.2.1",
+    "query-string": "^6.9.0",
     "react": "^16.12.0",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
