--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,8 @@
 *.userosscache
 *.sln.docstates
 *.json
-!package.json
-!package-lock.json
+!package*.json
+!appsettings*.json
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
