--- a/Project/Project/package.json
+++ b/Project/Project/package.json
@@ -14,6 +14,7 @@
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
+    "react-js-pagination": "^3.0.2",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-timestamp": "^5.1.0",
@@ -34,6 +35,7 @@
     "css-loader": "^3.2.0",
     "html-webpack-plugin": "^3.2.0",
     "react-hot-loader": "^4.12.18",
+    "react-paginate": "^6.3.2",
     "react-redux": "^7.1.3",
     "style-loader": "^1.0.0",
     "webpack": "^4.41.2",
