--- a/Project/Project/package.json
+++ b/Project/Project/package.json
@@ -8,6 +8,8 @@
     "date-time": "^3.1.0",
     "es6-promise": "^4.2.8",
     "extract-text-webpack-plugin": "^3.0.2",
+    "highcharts": "^8.0.0",
+    "highcharts-react-official": "^2.2.2",
     "immer": "^5.0.0",
     "isomorphic-fetch": "^2.2.1",
     "query-string": "^6.9.0",
