--- a/Project/Project/Project.csproj
+++ b/Project/Project/Project.csproj
@@ -9,7 +9,7 @@
     <Content Include="App\index.jsx" />
   </ItemGroup>
 
-  <ItemGroup>    <PackageReference Include="AutoMapper" Version="9.0.0" />    <PackageReference Include="JavaScriptEngineSwitcher.ChakraCore" Version="3.2.4" />    <PackageReference Include="JavaScriptEngineSwitcher.ChakraCore.Native.win-x64" Version="3.2.3" />    <PackageReference Include="JavaScriptEngineSwitcher.Extensions.MsDependencyInjection" Version="3.1.0" />
+  <ItemGroup>    <PackageReference Include="JavaScriptEngineSwitcher.ChakraCore" Version="3.2.4" />    <PackageReference Include="JavaScriptEngineSwitcher.ChakraCore.Native.win-x64" Version="3.2.3" />    <PackageReference Include="JavaScriptEngineSwitcher.Extensions.MsDependencyInjection" Version="3.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.SpaServices" Version="3.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="3.1.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.0" />
@@ -18,7 +18,6 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="3.1.0" />
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.0" />
     <PackageReference Include="React.AspNet" Version="5.1.2" />
   </ItemGroup>
 
