--- a/Project/Project/package.json
+++ b/Project/Project/package.json
@@ -5,46 +5,31 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.4.1",
-    "date-time": "^3.1.0",
-    "es6-promise": "^4.2.8",
-    "extract-text-webpack-plugin": "^3.0.2",
     "highcharts": "^8.0.0",
     "highcharts-react-official": "^2.2.2",
-    "immer": "^5.0.0",
-    "isomorphic-fetch": "^2.2.1",
-    "query-string": "^6.9.0",
+    "jquery": "^3.4.1",
+    "popper.js": "^1.16.0",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
+    "react-datepicker": "^2.10.1",
     "react-dom": "^16.12.0",
     "react-js-pagination": "^3.0.2",
-    "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "react-timestamp": "^5.1.0",
     "redux": "^4.0.4",
-    "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.7.0",
     "@babel/core": "^7.7.2",
-    "@babel/node": "^7.7.0",
     "@babel/plugin-proposal-class-properties": "^7.7.4",
     "@babel/preset-env": "^7.7.1",
     "@babel/preset-react": "^7.7.0",
-    "aspnet-webpack": "^3.0.0",
     "babel-loader": "^8.0.6",
-    "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.2.0",
-    "html-webpack-plugin": "^3.2.0",
-    "react-hot-loader": "^4.12.18",
-    "react-paginate": "^6.3.2",
     "react-redux": "^7.1.3",
     "style-loader": "^1.0.0",
     "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.9.0",
-    "webpack-hot-middleware": "^2.25.0",
-    "webpack-merge": "^4.2.2"
+    "webpack-bundle-analyzer": "^3.6.0",
+    "webpack-cli": "^3.3.10"
   },
   "scripts": {
     "build": "webpack"
