--- a/Project/Project/package.json
+++ b/Project/Project/package.json
@@ -9,6 +9,7 @@
     "highcharts-react-official": "^2.2.2",
     "jquery": "^3.4.1",
     "popper.js": "^1.16.0",
+    "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-datepicker": "^2.10.1",
